--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
     <link href="./resources/css/index.css" rel="stylesheet">
     <title>Big Al's BDS Playlist</title>
 </head>
-<body>
+<body onload = "handleOnLoad()">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Big Al's BDS Playlist</a>
@@ -45,86 +45,37 @@
         </div>
       </div>
 
-      <div id="cards" class="container">
-        <div class="row">
-            <div class="card col-md-4 bg-dark text-white">
-                <img src="./resources/images/music.jpeg" class="card-img" alt="...">
-                <div class="card-img-overlay">
-                    <h5 class="card-title">Sweet Home Alabama</h5>
-                </div>
-            </div>
-            <div class="card col-md-4 bg-dark text-white">
-                <img src="./resources/images/music.jpeg" class="card-img" alt="...">
-                <div class="card-img-overlay">
-                    <h5 class="card-title">Yea Alabama!</h5>
-                </div>
-            </div>
-            <div class="card col-md-4 bg-dark text-white">
-                <img src="./resources/images/music.jpeg" class="card-img" alt="...">
-                <div class="card-img-overlay">
-                    <h5 class="card-title">Thunderstruck</h5>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="card col-md-4 bg-dark text-white">
-                <img src="./resources/images/music.jpeg" class="card-img" alt="...">
-                <div class="card-img-overlay">
-                    <h5 class="card-title">Friends in Low Places</h5>
-                </div>
-            </div>
-            <div class="card col-md-4 bg-dark text-white">
-                <img src="./resources/images/music.jpeg" class="card-img" alt="...">
-                <div class="card-img-overlay">
-                    <h5 class="card-title">Mr. Brightside</h5>
-                </div>
-            </div>
-            <div class="card col-md-4 bg-dark text-white">
-                <img src="./resources/images/music.jpeg" class="card-img" alt="...">
-                <div class="card-img-overlay">
-                    <h5 class="card-title">Dixieland Delight</h5>
-                </div>
-            </div>
-        </div>
-    </div>
+
+      <div id="listBox" class="row"></div>
+      <div class="container">
+        <div id="searchSongs" class="row"></div>
+      </div>
 
     <div id="add" class="container">
         <form onsubmit="return false;">
             <label class="form-label" for="title">Enter a new song here:</label><br>
             <input class="form-control" type="text" id="title" name="title" ><br>
-            <button class="btn btn-dark">Add Song</button>
+            <button class="btn btn-dark" onclick="addSongs()">Add Song</button>
           </form>
     </div>
-
-    <div id="search" class="container">
-        <form onsubmit="return false;">
-            <label class="form-label" for="searchSong">Find a song here:</label><br>
-            <input class="form-control" type="text" id="searchSong" name="searchSong" ><br>
-            <button class="btn btn-dark" onclick="findSongs()">Find Song</button>
-          </form>
-    </div>
-
     <div id="delete" class="container">
         <form onsubmit="return false;">
-            <label class="form-label" for="deleteSong">Delete a song here:</label><br>
+            <label class="form-label" for="deleteSong">Delete a song here (Enter ID):</label><br>
             <input class="form-control" type="text" id="deleteSong" name="deleteSong" ><br>
-            <button class="btn btn-dark" onclick="deleteSong()">Delete Song</button>
+            <button class="btn btn-dark" onclick="lookForSongDelete()">Delete Song</button>
         </form>
     </div>
 
     <div id="favorite" class="container">
       <form onsubmit="return false;">
-          <label class="form-label" for="favoriteSong">Favorite a song here:</label><br>
+          <label class="form-label" for="favoriteSong">Favorite a song here (Enter ID):</label><br>
           <input class="form-control" type="text" id="favoriteSong" name="favoriteSong" ><br>
-          <button class="btn btn-dark" onclick="favoriteSong()">Favorite Song</button>
+          <button class="btn btn-dark" onclick="lookForSongFavorite()">Favorite Song</button>
       </form>
+
   </div>
 
-    <div class="container">
-        <div id="searchSongs" class="row"></div>
-    </div>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="./resources/script/index.js" type="text/JavaScript"></script>
+    <script src="./resources/scripts/index.js" type="text/JavaScript"></script>
 </body>
 </html>
